--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -25,4 +25,4 @@ production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
   secret_key_aws_id: AKIAIOCN2CZHRZE5BKQQ
   secret_key_aws_password: 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
-  secret_key_email_password: n22a12t1969
+  secret_key_email_password: 77sasha77sukov
